--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -289,7 +289,7 @@ Full-Width Styles
 #header_wrap {
   background: #212121;
   background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
+  background: -webkit-linear-gradient(top, #1f3969, #6e4e7b);
   background: -ms-linear-gradient(top, #373737, #212121);
   background: -o-linear-gradient(top, #373737, #212121);
   background: linear-gradient(top, #373737, #212121);
