--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -235,7 +235,7 @@ ul, ol, dl {
 }
 
 ul {
-  list-style-image: url('blue_star.png');
+  list-style-type: circle;
   font-size: 25%;
   padding-left: 20px;
 }
